--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Dialog.NearlyFullScreen" parent="@style/Theme.MaterialComponents.Dialog">
+    <style name="Dialog.NearlyFullScreen" parent="@style/AppTheme.FullScreen">
         <item name="android:windowMinWidthMajor">90%</item>
         <item name="android:windowMinWidthMinor">90%</item>
     </style>
