[layout] Fix layout of coloring the avatar

--- a/app/src/main/res/layout/panel_drawing_colors.xml
+++ b/app/src/main/res/layout/panel_drawing_colors.xml
@@ -15,7 +15,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="@dimen/panel_corner_radius">
 
         <LinearLayout
             android:id="@+id/linearLayoutColors"
