--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="material_design_height_small">24dp</dimen>
     <dimen name="arrow_height">85dp</dimen>
     <dimen name="arrow_width">210dp</dimen>
+    <dimen name="panel_corner_radius">40dp</dimen>
 </resources>
