--- a/app/src/main/res/layout/panel_drawing_tools.xml
+++ b/app/src/main/res/layout/panel_drawing_tools.xml
@@ -29,7 +29,7 @@
 
             <ImageView
                 android:id="@+id/btn_draw_setThinLineWidth"
-                android:layout_width="90dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
 
                 android:layout_weight="1"
@@ -44,7 +44,7 @@
 
             <ImageView
                 android:id="@+id/btn_draw_setMediumLineWidth"
-                android:layout_width="90dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
@@ -58,7 +58,7 @@
 
             <ImageView
                 android:id="@+id/btn_draw_setThickLineWidth"
-                android:layout_width="90dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
@@ -71,7 +71,7 @@
 
             <ImageView
                 android:id="@+id/btn_draw_undo"
-                android:layout_width="90dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:contentDescription="@string/undo"
